02 August 2014, version 1.0.4:
    * Increased version number to re-submit package to CRAN with CRLF line endings removed for configure and configure.ac.

25 July 2014, version 1.0.3:
    * Changed NLOPT_VERSION to 2.4.2 for Linux.
    * Changed nloptr.default.options from a data.frame to a function returning the data.frame.

25 July 2014, version 1.0.2:
    * Added configure script which tests for a system NLopt library via pkg-config and uses it if it is sufficiently recent (ie 2.4.*), and otherwise configure downloads, patches and builds the NLopt sources just how src/Makevars used to (thanks to Dirk Eddelbuettel).

05 May 2014, version 1.0.1:
* All unit tests are now enabled and use the package testthat. Install the package with argument INSTALL_opt = "--install-tests" supplied to install.packages to install the tests. The tests can be run after installation with test_package('nloptr'). The testthat package needs to be installed and loaded to be able to run the tests.
    * Changed default value for maxtime option from 0.0 to -1.0. In some cases nloptr returned NLOPT_MAXTIME_REACHED without running any iterations with the default setting. This change solves this.
    * Replaced cat by message or warning. Messages can be suppressed by suppressMessages.

27 January 2014, version 1.0.0:
    * Merged wrappers from the 'nloptwrap' package.

19 November 2013, version 0.9.6:
    * Added a line in Makevars to replace some code in NLopt to fix compilation on Solaris as requested by Brian Ripley.

12 November 2013, version 0.9.5:
    * Updated references from NLopt version 2.3 to NLopt version 2.4 in installation instructions in INSTALL.windows.
    * Added a line in Makevars that replaces some code related to type-casting in NLopt-2.4/isres/isres.c.
    * Changed encoding of src/nloptr.c from CP1252 to UTF-8.    

09 November 2013, version 0.9.4:
    * Updated NLopt to version 2.4.
    * Changed tests to use unit testing package testthat (these are currently disabled).