@@ -1,8 +1,8 @@
 Package: nloptr
 Type: Package
 Title: R interface to NLopt
-Version: 1.0.4
-Date: 2014-08-02
+Version: 1.0.5
+Date: 2015-01-28
 Author: Jelmer Ypma <uctpjyy@ucl.ac.uk>, with contributions by
         Hans W. Borchers <hwborchers@googlemail.com> and 
         Dirk Eddelbuettel <edd@debian.org>
@@ -18,7 +18,4 @@ Description:
 License: LGPL-3
 Suggests: testthat (>= 0.8.1)
 LazyLoad: yes
-Packaged: 2014-08-02 18:12:19 UTC; Jelmer
 NeedsCompilation: yes
-Repository: CRAN
-Date/Publication: 2014-08-04 15:35:43
