@@ -1,3 +1,6 @@
+28 January 2015, version 1.0.5:
+    * Added non-exported functions CFlags and LdFlags to be used in packages that want to link to the NLopt C library.
+
 02 August 2014, version 1.0.4:
     * Increased version number to re-submit package to CRAN with CRLF line endings removed for configure and configure.ac.
 
